--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             format("woff");
           font-weight: normal;
           font-style: normal;
-          transform : rotate(0.04deg);
+          transform: rotate(0.05deg);
         }
         /* body태그 자체에 css 요소 부여 */
         body {
@@ -40,19 +40,20 @@
             /* 상하 15 좌우 20 마진 높이는 200*/
             height: 200px;
             background-size: cover;
+
             /*cover는 이미지의 크기가 요소의 크기보다 항상 크거나 같다
               contain은 이미지의 크기가 요소의 크기보다 항상 작거나 같다*/
             position: relative;
             /*position(위치)이 뭔가요?
-: HTML 태그의 위치를 잡는 방법
-1. 배치 방법을 정한다(relative, absolute)
-2. 이동 시킨다(top, bottom 등)
+            : HTML 태그의 위치를 잡는 방법
+            1. 배치 방법을 정한다(relative, absolute)
+            2. 이동 시킨다(top, bottom 등)
 
-[위 코드를 해석하자면]
-1. .photo-frame, 넌 .photo-description의 위치를 잡는 기준이 될거야!
-2. .photo-description, 넌 기준으로부터 아래(bottom)에서 0만큼 위로 올라와서 위치해!
-3. 가운데 정렬도 잊지마! → (trnasform과 left는 set메뉴)
-*/
+            [위 코드를 해석하자면]
+            1. .photo-frame, 넌 .photo-description의 위치를 잡는 기준이 될거야!
+            2. .photo-description, 넌 기준으로부터 아래(bottom)에서 0만큼 위로 올라와서 위치해!
+            3. 가운데 정렬도 잊지마! → (trnasform과 left는 set메뉴)
+            */
         }
         .footer{
             display:flex;
@@ -72,16 +73,18 @@
             font-weight: 500;
         }
         #img1{
-            background-image: url(./img1.png);
+            background-image: url(./img5.jpg);
         }
         #img2{
-            background-image: url(./img2.png);
+            background-image: url(./img8.jpg);
         }
         #img3{
-            background-image: url(./img3.png);
+            background-image: url(./img11.jpg);
         }
         #img4{
-            background-image: url(./img4.png);
+            background-image: url(./img12.jpg);
+            background-size: contain;
+           
         }
         .photo_description{
             color:white;
@@ -112,28 +115,28 @@
         <div class = "photos">
             <div id="img1" class="photo-frame">
                 <span id="desc1"class="photo_description">
-                    우리 작년 
+                    수줍은 현빈이
                 </span>
             </div>
             <div id="img2" class="photo-frame">
                 <span id="desc2"class="photo_description">
-                    재작년 하이
+                    죽빵맞고 싶어?
                 </span>
             </div>
             <div id="img3" class="photo-frame">
                 <span id="desc3"class="photo_description">
-                    코딩 시작한 날
+                    오붓오붓ㅎㅎ
                 </span>
             </div>
             <div id="img4" class="photo-frame">
                 <span id="desc4"class="photo_description">
-                    html한 날
+                    냠냠
                 </span>
             </div>
         </div>
         <div class ="footer">
             <p class="f-title">Happy Luch Time</p>
-            <p class="f-date">2023.02.02</p>
+            <p class="f-date">2023.02.03</p>
         </div>
    </div>
 </body>
